--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Video Site</title>
 </head>
 <body>
-    <h1>Rule Video</h1>
-    <video width="512" height="640" controls>
-        <source src="rule_video_2.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
+  <video controls autoplay>
+    <source src="your-video-file.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
 </body>
 </html>
