--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
     <h1>Video Playback</h1>
     <video width="512" height="640" controls>
-        <source src="./your_video.mp4" type="video/mp4">
+        <source src="./rule_video_2.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 </body>
